Refactor AutoCare Hub frontend shell and docs